--- a/projects.yaml
+++ b/projects.yaml
@@ -1,11 +1,11 @@
-# 
+#
 # Format of this file:
-# 
+#
 #  - First we have the "tagsonomy", a tree of tags used to categorize the projects.
 #  - After that is "projects", a list of awesome projects
-# 
+#
 # Each project has the following format:
-# 
+#
 #  - name: Project Name
 #    repo_url: github or bitbucket or other web link to code
 #    wp_url: Wikipedia URL if there is one
@@ -13,13 +13,13 @@
 #    home_url: Home page if not one of the above
 #    tags: ["", ""]  # see full taxonomy elsewhere in this file
 #    desc: Handy project designed for handiness
-# 
+#
 # Only the name, repo_url, tags, and description are required.
-# 
+#
 # In the description, avoid references to Python, free/open-source, and
 # the app name itself, since those are already present/implied by being
-# on the list.  
-# 
+# on the list.
+#
 tagsonomy:
   # NOTE: order here controls order of the rendered text
   topic:
@@ -116,9 +116,9 @@ tagsonomy:
     - proprietary
 
 projects:
-# 
+#
 # Internet
-# 
+#
   - name: ArchiveBox
     repo_url: https://github.com/pirate/ArchiveBox
     home_url: https://archivebox.io/
@@ -296,9 +296,9 @@ projects:
       - linux
       - windows
       - mac
-# 
+#
 # Audio
-# 
+#
   - name: Beets
     repo_url: https://github.com/beetbox/beets
     pypi_url: https://pypi.org/project/beets
@@ -405,9 +405,9 @@ projects:
       - audio
       - linux
       - gtk
-# 
+#
 # Video
-# 
+#
   - name: Flowblade
     repo_url: https://github.com/jliljebl/flowblade
     wp_url: https://en.wikipedia.org/wiki/Flowblade
@@ -458,15 +458,6 @@ projects:
 #
 # Graphics
 #
-#
-# Graphics
-#
-#
-# Graphics
-#
-# 
-# Graphics
-# 
   - name: cartoonify / Draw This.
     repo_url: https://github.com/danmacnish/cartoonify
     home_url: https://www.kapwing.com/cartoonify
@@ -586,9 +577,9 @@ projects:
       - graphics
       - dev
       - server
-# 
+#
 # Games
-# 
+#
   - name: Frets on Fire X
     repo_url: https://github.com/fofix/fofix
     # see_also: https://github.com/fretsonfire/fof-python
@@ -647,9 +638,9 @@ projects:
       - linux
       - windows
       - mac
-# 
+#
 # Productivity
-# 
+#
   - name: Autokey
     repo_url: https://github.com/autokey/autokey
     pypi_url: https://pypi.org/project/autokey
@@ -776,9 +767,9 @@ projects:
       - productivity
       - server
       - flask
-# 
+#
 # Organization
-# 
+#
   - name: Calibre
     repo_url: https://github.com/kovidgoyal/calibre
     home_url: https://calibre-ebook.com/
@@ -904,9 +895,9 @@ projects:
       - linux
       - windows
       - gtk
-# 
+#
 # Communication
-# 
+#
   - name: Abilian SBE
     repo_url: https://github.com/abilian/abilian-sbe
     home_url: https://www.abilian.com/
@@ -1107,9 +1098,9 @@ projects:
     tags:
       - communication
       - server
-# 
+#
 # Education
-# 
+#
   - name: Anki
     repo_url: https://github.com/dae/anki
     home_url: https://apps.ankiweb.net/
@@ -1145,9 +1136,9 @@ projects:
     tags:
       - education
       - server
-# 
+#
 # Science
-# 
+#
   - name: AnuGA
     repo_url: https://github.com/GeoscienceAustralia/anuga_core
     home_url: https://anuga.anu.edu.au/
@@ -1292,9 +1283,9 @@ projects:
       - windows
       - mac
       - qt
-# 
+#
 # Cms
-# 
+#
   - name: Django-CMS
     repo_url: https://github.com/divio/django-cms
     home_url: https://www.django-cms.org/en
@@ -1352,9 +1343,9 @@ projects:
       - cms
       - server
       - django
-# 
+#
 # Erp
-# 
+#
   - name: ERP5
     home_url: https://erp5.nexedi.com/
     repo_url: https://lab.nexedi.com/nexedi/erp5
@@ -1391,9 +1382,9 @@ projects:
       - erp
       - server
       - fdn
-# 
+#
 # Static_Site
-# 
+#
   - name: Cactus
     repo_url: https://github.com/eudicots/Cactus
     pypi_url: https://pypi.org/project/cactus
@@ -1460,9 +1451,12 @@ projects:
 #
 # Scm
 #
-# 
+#
 # Scm
-# 
+#
+#
+# Scm
+#
   - name: Allura
     repo_url: https://github.com/apache/allura
     wp_url: https://en.wikipedia.org/wiki/Apache_Allura
@@ -1571,9 +1565,9 @@ projects:
     tags:
       - scm
       - server
-# 
+#
 # Code_Review
-# 
+#
   - name: Meld
     repo_url: https://github.com/GNOME/meld
     home_url: http://meldmerge.org/
@@ -1599,15 +1593,23 @@ projects:
     tags:
       - code_review
       - server
-# 
+#
 # Storage
-# 
+#
   - name: Barman
     repo_url: https://github.com/2ndquadrant-it/barman
     desc: Remote backup and disaster recovery for PostgreSQL.
     tags:
       - storage
       - linux
+  - name: EdgeDB
+    home_url: https://edgedb.com/
+    repo_url: https://github.com/edgedb/edgedb
+    docs_url: https://edgedb.com/docs
+    desc: High-performance object-relational database built on top of PostgreSQL, featuring strict, strong typing, built-in migrations, and GraphQL support.
+    tags:
+      - storage
+      - server
   - name: kinto
     repo_url: https://github.com/Kinto/kinto
     docs_url: http://docs.kinto-storage.org/
@@ -1650,9 +1652,9 @@ projects:
     tags:
       - storage
       - linux
-# 
+#
 # Ops
-# 
+#
   - name: Ansible
     repo_url: https://github.com/ansible/ansible
     docs_url: https://docs.ansible.com/ansible
@@ -1826,9 +1828,9 @@ projects:
       - linux
       - mac
       - server
-# 
+#
 # Security
-# 
+#
   - name: Cowrie
     repo_url: https://github.com/cowrie/cowrie
     home_url: http://www.cowrie.org/
@@ -1918,9 +1920,9 @@ projects:
     tags:
       - security
       - console
-# 
+#
 # Docs
-# 
+#
   - name: asciidoc
     repo_url: https://github.com/asciidoc/asciidoc
     desc: Text document format for writing notes, documentation, articles, books, slideshows, man pages & blogs.
@@ -1959,9 +1961,9 @@ projects:
     tags:
       - docs
       - console
-# 
+#
 # Editor
-# 
+#
   - name: Black
     repo_url: https://github.com/ambv/black
     docs_url: https://black.readthedocs.io/
@@ -2069,9 +2071,9 @@ projects:
       - windows
       - mac
       - tk
-# 
+#
 # Pkg_Mgr
-# 
+#
   - name: Conda
     home_url: https://conda.io/
     repo_url: https://github.com/conda/conda
@@ -2145,9 +2147,9 @@ projects:
       - pkg_mgr
       - linux
       - corp
-# 
+#
 # Pkg_Repo
-# 
+#
   - name: Bandersnatch
     repo_url: https://github.com/pypa/bandersnatch
     desc: PyPI mirror client complying with [PEP 381](http://www.python.org/dev/peps/pep-0381/).
@@ -2171,9 +2173,9 @@ projects:
       - pkg_repo
       - server
       - fnd
-# 
+#
 # Build
-# 
+#
   - name: bitbake
     wp_url: https://en.wikipedia.org/wiki/BitBake
     repo_url: https://github.com/openembedded/bitbake
@@ -2258,9 +2260,9 @@ projects:
     tags:
       - build
       - linux
-# 
+#
 # Shell
-# 
+#
   - name: Ergonomica
     repo_url: https://github.com/ergonomica/ergonomica
     docs_url: http://ergonomica.readthedocs.io/
@@ -2286,9 +2288,9 @@ projects:
       - linux
       - windows
       - mac
-# 
+#
 # Dev
-# 
+#
   - name: asciinema
     repo_url: https://github.com/asciinema/asciinema
     home_url: https://asciinema.org/
@@ -2404,9 +2406,9 @@ projects:
       - linux
       - windows
       - mac
-# 
+#
 # Misc
-# 
+#
   - name: Guake
     repo_url: https://github.com/Guake/guake
     home_url: http://guake-project.org/
